public interface Adjustable {
    void resize(double factor);
    void rotate(double angle);
}